ECLIPSE/ECLIPSE/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for Usuario_Normal
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Normal
13:30:06 **** Rebuild of configuration Debug Gcov for project Pruebas ****
Info: Internal Builder is used for build
g++ -std=c++1z "-IC:\\Users\\franm\\Desktop\\UNIVERSIDAD\\Segundo\\IngenieriaSoftware\\implementacion_IS\\ECLIPSE\\Pruebas\\cute" "-IC:\\Users\\franm\\Desktop\\UNIVERSIDAD\\Segundo\\IngenieriaSoftware\\implementacion_IS\\ECLIPSE\\Pruebas\\boost" -O0 -g3 -ftest-coverage -fprofile-arcs -Wall -c -fmessage-length=0 -Wno-attributes -o PRUEBACOMPILAR.o "..\\PRUEBACOMPILAR.cc" 
..\PRUEBACOMPILAR.cc:1:23: fatal error:  iostream : No such file or directory
 # include < iostream >
                       ^
compilation terminated.
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Normal
13:30:13 **** Incremental Build of configuration Debug Gcov for project Pruebas ****
Info: Internal Builder is used for build
g++ -std=c++1z "-IC:\\Users\\franm\\Desktop\\UNIVERSIDAD\\Segundo\\IngenieriaSoftware\\implementacion_IS\\ECLIPSE\\Pruebas\\cute" "-IC:\\Users\\franm\\Desktop\\UNIVERSIDAD\\Segundo\\IngenieriaSoftware\\implementacion_IS\\ECLIPSE\\Pruebas\\boost" -O0 -g3 -ftest-coverage -fprofile-arcs -Wall -c -fmessage-length=0 -Wno-attributes -o PRUEBACOMPILAR.o "..\\PRUEBACOMPILAR.cc" 
..\PRUEBACOMPILAR.cc:1:23: fatal error:  iostream : No such file or directory
 # include < iostream >
                       ^
compilation terminated.
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Normal
13:31:19 **** Incremental Build of configuration Debug Gcov for project Pruebas ****
Info: Internal Builder is used for build
g++ -std=c++1z "-IC:\\Users\\franm\\Desktop\\UNIVERSIDAD\\Segundo\\IngenieriaSoftware\\implementacion_IS\\ECLIPSE\\Pruebas\\cute" "-IC:\\Users\\franm\\Desktop\\UNIVERSIDAD\\Segundo\\IngenieriaSoftware\\implementacion_IS\\ECLIPSE\\Pruebas\\boost" -O0 -g3 -ftest-coverage -fprofile-arcs -Wall -c -fmessage-length=0 -Wno-attributes -o "src\\Test.o" "..\\src\\Test.cpp" 
g++ -fprofile-arcs -ftest-coverage -std=c99 -ftest-coverage -fprofile-arcs -o Pruebas.exe "src\\Test.o" 
13:31:27 **** Incremental Build of configuration Debug for project Usuario_Administrador ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -o PRUEBACOMPILAR.o "..\\PRUEBACOMPILAR.cc" 
..\PRUEBACOMPILAR.cc:1:23: fatal error:  iostream : No such file or directory
 # include < iostream >
                       ^
compilation terminated.
Info: Nothing to build for Usuario_Normal
Info: Nothing to build for Pruebas
13:31:53 **** Incremental Build of configuration Debug for project Usuario_Administrador ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -o PRUEBACOMPILAR.o "..\\PRUEBACOMPILAR.cc" 
g++ -o Usuario_Administrador.exe PRUEBACOMPILAR.o 
Info: Nothing to build for Usuario_Normal
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
Info: Nothing to build for Usuario_Administrador
23:58:58 **** Incremental Build of configuration Debug for project Usuario_Administrador ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -o Usuario_Administrador.o "..\\Usuario_Administrador.cc" 
..\Usuario_Administrador.cc:4:1: error: 'string' does not name a type
 string getPassword();
 ^~~~~~
..\Usuario_Administrador.cc:6:1: error: 'string' does not name a type
 string getName();
 ^~~~~~
..\Usuario_Administrador.cc:8:1: error: 'string' does not name a type
 string getMail();
 ^~~~~~
00:09:00 **** Incremental Build of configuration Debug for project Usuario_Administrador ****
Info: Internal Builder is used for build
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -o Usuario_Administrador.o "..\\Usuario_Administrador.cc" 
g++ -o Usuario_Administrador.exe Usuario_Administrador.o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../libmingw32.a(main.o):(.text.startup+0xa0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
00:09:10 **** Incremental Build of configuration Debug for project Usuario_Administrador ****
Info: Internal Builder is used for build
g++ -o Usuario_Administrador.exe Usuario_Administrador.o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../libmingw32.a(main.o):(.text.startup+0xa0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
